services methods simplified

--- a/TODO
+++ b/TODO
@@ -2,5 +2,5 @@
 √ add POST terminals - Create a terminals
 √ add PUT terminals - Edit terminals name or client
 √ add DELETE terminals - Delete a terminals
-- add GET terminals params - Get alist of all parameter of the terminal specified
+- add GET terminals params - Get alist of all parameters of the terminal specified
 - add POST terminals params bulk - Edit the parameter value of a terminal
