--- a/TODO
+++ b/TODO
@@ -3,4 +3,4 @@
 √ add PUT terminals - Edit terminals name or client
 √ add DELETE terminals - Delete a terminals
 √ add GET terminals params - Get alist of all parameters of the terminal specified
-- add POST terminals params bulk - Edit the parameter value of a terminal
+√ add POST terminals params bulk - Edit the parameter value of a terminal
